--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
     <script defer src="/__/firebase/9.0.1/firebase-performance.js"></script>
     <!-- 
       initialize the SDK after all desired features are loaded, set useEmulator to false
-      to avoid connecting the SDK to running emulators.
+      to avoid connecting the SDK to running emulators..
     -->
     <script defer src="/__/firebase/init.js?useEmulator=true"></script>
 
